--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -724,6 +724,18 @@ input[type="button"]:hover, button[type=button]:hover {background-color: #222}
     margin-bottom: 10px;
     width: 100%;
 }
+input[type="submit"], button[type=submit] {
+    background: none repeat scroll 0 0 #5a88ca;
+    border: medium none;
+    color: #fff;
+    padding: 11px 20px;
+    text-transform: uppercase;
+}
+input[type="submit"]:hover, button[type=submit]:hover {background-color: #222}
+.single-sidebar input[type="text"] {
+    margin-bottom: 10px;
+    width: 100%;
+}
 .thubmnail-recent {
     margin-bottom: 30px;
     overflow: hidden;
